--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                 <p>There are many rooms.</p>
             </div>
             <div class="image-right">
-                <img src="images/Room&Suit.jpg" alt="rooms" class="feature-image">
+                <img src="Images/Room&Suit.jpg" alt="rooms" class="feature-image">
             </div>
         </div>
 
         <div id="Feature-Dining" class="Features_slot">
             <div class="image-left">
-                <img src="images/dining.jpg" alt="swimming_pool" class="feature-image" >
+                <img src="Images/dining.jpg" alt="swimming_pool" class="feature-image" >
             </div>
             <div class="text-left">
                 <h1>Fine Dining</h1>
@@ -88,7 +88,7 @@
                 <p>Available 24/7.</p>
             </div>
             <div class="image-right">
-                <img src="images/gym.jpg" alt="gym" class="feature-image">
+                <img src="Images/gym.jpg" alt="gym" class="feature-image">
             </div>
         </div>
 
@@ -96,7 +96,7 @@
 
         <div id="Feature-Spa" class="Features_slot">
             <div class="image-right">
-                <img src="images/spa.jpg" alt="gym" class="feature-image">
+                <img src="Images/spa.jpg" alt="gym" class="feature-image">
             </div>
             <div class="text-left">
                 <h1>Spa</h1>
@@ -112,7 +112,7 @@
                 <p>Exotic Swimming Pool.</p>
             </div>
             <div class="image-right">
-                <img src="images/Swimming.jpg" alt="swimming_pool" class="feature-image" >
+                <img src="Images/Swimming.jpg" alt="swimming_pool" class="feature-image" >
             </div>
         </div>
 
@@ -120,7 +120,7 @@
 
         <div id="Feature-Hot-Spring" class="Features_slot">
             <div class="image-right">
-                <img src="images/Hot_Spring.jpg" alt="Hot_Spring" class="feature-image" >
+                <img src="Images/Hot_Spring.jpg" alt="Hot_Spring" class="feature-image" >
             </div>
             <div class="text-left">
                 <h1>Hot Spring</h1>
