Feature page changes

--- a/index.html
+++ b/index.html
@@ -1,134 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com/" />
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-    <script src="script.js"></script>
-    <title>Project</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lora&display=swap"
-      rel="stylesheet"
-    />
-    <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com/" />
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+  <script src="script.js"></script>
+  <title>Project</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-  <body>
-    <div id="main">
-      <div id="header">
-        <img id="logo" src="Images/logo1.svg"/>
-        <div class="links-left">
-          <div class="links">Booking</div>
-          <div class="links"><a href="HTML/rooms.html">Rooms</a></div>
-          <div class="links">Facilities</div>
-          <div class="links">Reviews</div>
-          <div class="links">Gallery</div>
-        </div>
-        <div class="links-right">
-          <div class="links login">Log In</div>
-          <div class="links signin">Sign In</div>
-        </div>
+
+<body>
+  <div id="main">
+    <div id="header">
+      <img id="logo" src="Images/logo1.svg" />
+      <div class="links-left">
+        <div class="links">Booking</div>
+        <div class="links"><a href="HTML/rooms.html">Rooms</a></div>
+        <div class="links"> <a href="#Features">Facilities</a> </div>
+        <div class="links">Reviews</div>
+        <div class="links">Gallery</div>
       </div>
-      <div id="intro">
-        <div id="book-bar">
-          <div id="arrival" class="date">
-            <p>Arrival Date :</p>
-            <p>21/12/2022</p>
-          </div>
-          <p>|</p>
-          <div id="depart" class="date">
-            <p>Departure Date :</p>
-            <p>28/12/2022</p>
-          </div>
-          <p>|</p>
-          <div id="book-bar-rooms">
-            <p>Rooms :</p>
-            <p>3</p>
-          </div>
-          <p>|</p>
-          <div id="book-bar-people">
-            <p>No. of people :</p>
-            <p>6</p>
-          </div>
+      <div class="links-right">
+        <div class="links login">Log In</div>
+        <div class="links signin">Sign In</div>
+      </div>
+    </div>
+    <div id="intro">
+      <div id="book-bar">
+        <div id="arrival" class="date">
+          <p>Arrival Date :</p>
+          <p>21/12/2022</p>
+        </div>
+        <p>|</p>
+        <div id="depart" class="date">
+          <p>Departure Date :</p>
+          <p>28/12/2022</p>
+        </div>
+        <p>|</p>
+        <div id="book-bar-rooms">
+          <p>Rooms :</p>
+          <p>3</p>
+        </div>
+        <p>|</p>
+        <div id="book-bar-people">
+          <p>No. of people :</p>
+          <p>6</p>
         </div>
       </div>
     </div>
-    <div id="Features">
-        
+  </div>
+  <div id="Features">
 
-        <div id="Feature-rooms" class="Features_slot">
-            <div class="text-left">
-                <h1>Rooms & Suite</h1>
-                <p>There are many rooms.</p>
-            </div>
-            <div class="image-right">
-                <img src="Images/Room&Suit.jpg" alt="rooms" class="feature-image">
-            </div>
-        </div>
-
-        <div id="Feature-Dining" class="Features_slot">
-            <div class="image-left">
-                <img src="Images/dining.jpg" alt="swimming_pool" class="feature-image" >
-            </div>
-            <div class="text-left">
-                <h1>Fine Dining</h1>
-                <p>Variour Exotic Cuisine</p>
-            </div>
-        </div>
-
-
-        <div id="Feature-Gym" class="Features_slot">
-            <div class="text-left">
-                <h1>Fitness Centre</h1>
-                <p>Available 24/7.</p>
-            </div>
-            <div class="image-right">
-                <img src="Images/gym.jpg" alt="gym" class="feature-image">
-            </div>
-        </div>
-
-
-
-        <div id="Feature-Spa" class="Features_slot">
-            <div class="image-right">
-                <img src="Images/spa.jpg" alt="gym" class="feature-image">
-            </div>
-            <div class="text-left">
-                <h1>Spa</h1>
-                <p>Chill, Relax and Just Spa</p>
-            </div>
-        </div>
-
-
-
-        <div id="Feature-Pool" class="Features_slot">
-            <div class="text-left">
-                <h1>Swimming Pool</h1>
-                <p>Exotic Swimming Pool.</p>
-            </div>
-            <div class="image-right">
-                <img src="Images/Swimming.jpg" alt="swimming_pool" class="feature-image" >
-            </div>
-        </div>
-
-
-
-        <div id="Feature-Hot-Spring" class="Features_slot">
-            <div class="image-right">
-                <img src="Images/Hot_Spring.jpg" alt="Hot_Spring" class="feature-image" >
-            </div>
-            <div class="text-left">
-                <h1>Hot Spring</h1>
-                <p>Get to meet Monkey D. Luffy, the face of our Resort</p>
-            </div>
-        </div>
-
-
+    <div id="Feature-rooms" class="Features_slot">
+      <div class="text-left">
+        <h1>Rooms & Suite</h1>
+        <p>There are many rooms. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde at iste impedit quasi repellat nostrum consectetur perferendis doloribus praesentium, nemo iure amet neque, tempore recusandae.</p>
+      </div>
+      <div class="image-right">
+        <img src="Images/Room&Suit.jpg" alt="rooms" class="feature-image">
+      </div>
     </div>
-  </body>
+
+    <div id="Feature-Dining" class="Features_slot">
+      <div class="image-right">
+        <img src="Images/dining.jpg" alt="swimming_pool" class="feature-image">
+      </div>
+      <div class="text-left text-right">
+        <h1>Fine Dining</h1>
+        <p>Variour Exotic Cuisine Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde at iste impedit quasi repellat nostrum consectetur perferendis doloribus praesentium, nemo iure amet neque, tempore recusandae.</p>
+      </div>
+    </div>
+
+
+    <div id="Feature-Gym" class="Features_slot">
+      <div class="text-left">
+        <h1>Fitness Centre</h1>
+        <p>Available 24/7. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde at iste impedit quasi repellat nostrum consectetur perferendis doloribus praesentium, nemo iure amet neque, tempore recusandae.</p>
+      </div>
+      <div class="image-right">
+        <img src="Images/gym.jpg" alt="gym" class="feature-image">
+      </div>
+    </div>
+
+
+
+    <div id="Feature-Spa" class="Features_slot">
+      <div class="image-right">
+        <img src="Images/spa.jpg" alt="gym" class="feature-image">
+      </div>
+      <div class="text-left text-right">
+        <h1>Spa</h1>
+        <p>Chill, Relax and Just Spa Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde at iste impedit quasi repellat nostrum consectetur perferendis doloribus praesentium, nemo iure amet neque, tempore recusandae.</p>
+      </div>
+    </div>
+
+
+
+    <div id="Feature-Pool" class="Features_slot">
+      <div class="text-left">
+        <h1>Swimming Pool</h1>
+        <p>Exotic Swimming Pool. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde at iste impedit quasi repellat nostrum consectetur perferendis doloribus praesentium, nemo iure amet neque, tempore recusandae.</p>
+      </div>
+      <div class="image-right">
+        <img src="Images/Swimming.jpg" alt="swimming_pool" class="feature-image">
+      </div>
+    </div>
+
+
+
+    <div id="Feature-Hot-Spring" class="Features_slot">
+      <div class="image-right">
+        <img src="Images/Hot_Spring.jpg" alt="Hot_Spring" class="feature-image">
+      </div>
+      <div class="text-left text-right">
+        <h1>Hot Spring</h1>
+        <p>Get to meet Monkey D. Luffy, the face of our Resort</p>
+      </div>
+    </div>
+
+
+  </div>
+</body>
+
 </html>
