--- a/HTML/rooms.html
+++ b/HTML/rooms.html
@@ -18,16 +18,16 @@
   <body>
     <div id="main">
       <div id="header">
-        <img id="logo" src="../Images/logo1.svg"/>
+        <img id="logo" src="../Images/logo1.svg" />
         <div class="links-left">
           <div class="links">Booking</div>
-          <div class="links"><a href="../HTML/rooms.html">Rooms</a></div>
-          <div class="links">Facilities</div>
+          <div class="links"><a href="HTML/rooms.html">Rooms</a></div>
+          <div class="links"><a href="#Features">Facilities</a></div>
           <div class="links">Reviews</div>
           <div class="links">Gallery</div>
         </div>
         <div class="links-right">
-          <div class="links login">Log In</div>
+          <div class="links signup">Sign Up</div>
           <div class="links signin">Sign In</div>
         </div>
       </div>
@@ -37,6 +37,19 @@
             <div class="room-text"></div>
             <div class="room-imgbox"><img class="room-img" src="../Images/room1.jpg"></div>
         </div>
+        <div class="room">
+          <div class="room-imgbox"><img class="room-img" src="../Images/room1.jpg"></div>
+          <div class="room-text"></div>
+        </div>
+        <div class="room">
+          <div class="room-text"></div>
+          <div class="room-imgbox"><img class="room-img" src="../Images/room1.jpg"></div>
+        </div>
+        <div class="room">
+          <div class="room-imgbox"><img class="room-img" src="../Images/room1.jpg"></div>
+          <div class="room-text"></div>
+        </div>
+
       </div>
     </div>
   </body>
