Other Features merged

--- a/HTML/rooms.html
+++ b/HTML/rooms.html
@@ -35,7 +35,7 @@
         <div id="room-head">Our Rooms</div>
         <div class="room">
             <div class="room-text"></div>
-            <div class="room-imgbox"><img class="room-img" src="../Images/room1.jpg"></div>
+            <div class="room-imgbox"><img class="room-img" src="../Images/Imperial_Hotel_Osaka_regular_floor_standard_twin_room_20120630-001.jpg"></div>
         </div>
         <div class="room">
           <div class="room-imgbox"><img class="room-img" src="../Images/room1.jpg"></div>
