--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <!--* Icon Kit -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js%22%3E"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js%22%3E"></script>
+    <script src="https://kit.fontawesome.com/1da93b4563.js" crossorigin="anonymous"></script>
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
@@ -201,6 +205,40 @@
             alt="swimming_pool"
             class="feature-image"
           />
+        </div>
+      </div>
+
+
+
+      <div class="Other-Features">
+        <div class="Other-Feature-list" id="flist-1">
+          <h1 class="Other-Feature-list-heading">
+            FEATURED AMENITIES ON-SITE
+          </h1>
+          <div class="other-feature-box">
+            <ul class="list">
+              <li><i class="fa-solid fa-leaf"></i>  Sustainability</li>
+              <li><i class="fa-solid fa-utensils"></i>  Restaurant</li>
+              <li><i class="fa-solid fa-spa"></i>  Spa</li>
+              <li><i class="fa-solid fa-dumbbell"></i>  Fitness Center</li>
+              <li><i class="fa-solid fa-golf-ball-tee"></i>  On-Site Golf</li>
+              <li><i class="fa-solid fa-person-swimming"></i>  Indoor Pool</li>
+              <li><i class="fa-solid fa-bell-concierge"></i>  24 Hour Room Service</li>
+              <li><i class="fa-solid fa-broom"></i>  Daily Housekeeping</li>
+              <li><i class="fa-solid fa-mattress-pillow"></i>  Turndown Service</li>
+              <li><i class="fa-solid fa-couch"></i>  Meeting Space</li>
+              <li><i class="fa-solid fa-table-tennis-paddle-ball"></i>  Games Room</li>
+              <li><i class="fa-solid fa-gift"></i>  Gift Shop</li>
+              <li><i class="fa-solid fa-shirt"></i>  Dry Cleaning</li>
+              <li><i class="fa-solid fa-phone"></i>  Sevices</li>
+              <li><i class="fa-solid fa-water"></i>  Laundry</li>
+              <li><i class="fa-solid fa-futbol"></i>  Activties for Kids</li>
+              <li><i class="fa-solid fa-scissors"></i>  Hair Salon</li>
+              <li><i class="fa-solid fa-cart-flatbed-suitcase"></i>  Room Service</li>
+              <li><i class="fa-solid fa-phone-volume"></i>  Wake up Calls</li>
+              <li><i class="fa-solid fa-wifi"></i>  Free Wifi</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
