--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               <li><i class="fa-solid fa-dumbbell"></i>  Fitness Center</li>
               <li><i class="fa-solid fa-golf-ball-tee"></i>  On-Site Golf</li>
               <li><i class="fa-solid fa-person-swimming"></i>  Indoor Pool</li>
-              <li><i class="fa-solid fa-bell-concierge"></i>  24 Hour Room Service</li>
+              <li><i class="fa-solid fa-bell-concierge"></i>  24/7 Room Service</li>
               <li><i class="fa-solid fa-broom"></i>  Daily Housekeeping</li>
               <li><i class="fa-solid fa-mattress-pillow"></i>  Turndown Service</li>
               <li><i class="fa-solid fa-couch"></i>  Meeting Space</li>
