--- a/HTML/rooms.html
+++ b/HTML/rooms.html
@@ -34,19 +34,29 @@
       <div id="rooms">
         <div id="room-head">Our Rooms</div>
         <div class="room">
-            <div class="room-text"></div>
-            <div class="room-imgbox"><img class="room-img" src="../Images/Imperial_Hotel_Osaka_regular_floor_standard_twin_room_20120630-001.jpg"></div>
+            <div class="room-text">
+              <p>Luxury Room Various View King Bed</p>
+              <p>Possessing all the elements of a contemporary design and state of the art facilities, these rooms also exude the heritage of Calcutta</p>
+              <p>27 Sq Mt</p>
+              <p>Complimentary WiFi</p>
+              <p>Up to 4 guests. Max Adults: 2, Max Children: 2</p>
+              <p>King/Twin</p>
+              <p>Grand interiors & relaxing views</p>
+              <p>₹ 10,500*</p>
+              <p>Starting Rate/Night</p>
+            </div>
+            <div class="room-imgbox-right"></div>
         </div>
         <div class="room">
-          <div class="room-imgbox"><img class="room-img" src="../Images/room1.jpg"></div>
+          <div class="room-imgbox-left"></div>
           <div class="room-text"></div>
         </div>
         <div class="room">
           <div class="room-text"></div>
-          <div class="room-imgbox"><img class="room-img" src="../Images/room1.jpg"></div>
+          <div class="room-imgbox-right"></div>
         </div>
         <div class="room">
-          <div class="room-imgbox"><img class="room-img" src="../Images/room1.jpg"></div>
+          <div class="room-imgbox-left"></div>
           <div class="room-text"></div>
         </div>
 
