--- a/HTML/rooms.html
+++ b/HTML/rooms.html
@@ -24,7 +24,7 @@
       <div id="header">
         <img class="logo" src="../Images/logo1.svg" />
         <div class="links-left">
-          <div class="links">Booking</div>
+          <div class="links"> <a href="../index.html">Home</a> </div>
           <div class="links"><a href="HTML/rooms.html">Rooms</a></div>
           <div class="links"><a href="#Features">Facilities</a></div>
           <div class="links">Reviews</div>
